# AlphonsoEcosystem

./: .editorconfig  .env.example  .gitignore  .railwayignore  .vercelignore  14.07.2026CurrentStateofRepo.md  25.06.2026CelineAudit.md  AGENTS.md  AGENT_COORDINATION.md  AGENT_COORDINATION_LOG.md  ALPHONSOAUDIT25.06.2026.md  ALPHONSOAUDIT26.06.2026.md  ALPHONSOBUILDERMESSAGE.md  ALPHONSOJUNECOMPLITIONIOSCOMPANION.md  ALPHONSOTOTHEMOON.md  ALPHONSO_AUDIT_27_06_2026_REPORT_1.md  ALPHONSO_AUDIT_27_06_2026_REPORT_2_COMPARISON.md  ALPHONSO_AUDIT_27_06_2026_REPORT_3_PLAN.md  ARCHITECTURE.md  AlphonsoJuneComplitionSprint.md  CLAUDE.md  CLAUDECODEJUNECOMPLITIONALPHONSO.md  CLINEJUNECOMPLITIONALPHONSO.md  CONTRIBUTING.md  FABLE5.md  I'll output the final `vercel.json` again to confirm.vercel.json  I'll output the updated `vercel.json`.vercel.json  IOSDEVHANDOFF.md  JUNECANDY2026TODO.md  KANBAN_STAGE_ONE.md  LICENSE  OPENCODEJUNECOMPLITIONALPHONSO.md  README.md  REPO_DIRECTIVE.md  REPO_RULES.md  ROADTOALPHONSOECOSYSTEM.md  ROADTOALPHONSOECOSYSTEMBatch1Agent.md  ROADTOALPHONSOECOSYSTEMBatch2Agent.md  SECURITY.md  SECURITY_SCAN_REPORT.md  (+22 more)
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit_log.rs  companion_auth.rs  companion_discovery.rs  companion_router.rs  companion_server.rs  companion_types.rs  connector_commands.rs  kv_store.rs  lib.rs  memory_store.rs  meta_publish.rs  native_proof.rs  ollama.rs  plugin_runtime.rs  policy_gate.rs  runway.rs  (+8 more)
(+1240 files in other folders)
