[package]
name = "app"
version = "2.4.4"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.11"
rusqlite = { version = "0.40", features = ["bundled"] }
tauri-plugin-updater = "2"
hmac = "0.13"
tokio = { version = "1", features = ["time", "rt", "macros", "net", "process", "io-util"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
mdns-sd = "0.20"
hostname = "0.3"
subtle = "2"
dotenvy = "0.15"
base64 = "0.22"
tauri-plugin-notification = "2.3.3"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
arboard = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
panic = "abort"
